Revision history for Perl extension Catalyst::Model::DBIC::Schema

0.63
        - Make MooseX::MarkAsMethods a hard prerequisite (RT#94923)

0.62  2014-01-06 12:32:27
        - Don't ship MYMETA.* files (RT#91808)
        - Stop using deprecated Class::MOP::load_module

0.61  2013-06-19 12:48:34
        - Fix test failure caused by hash randomisation in perl 5.17 (RT#82917)

0.60  2012-06-12 16:27:00
        - Add per_request_schema hook to PerRequestSchema trait and docs
        - Additional paranoia in types as it's possible for loading code
          to clobber $_

0.59  2011-11-01 11:20:46
        - update helper deps for new loader

0.58  2011-10-25 19:19:43
        - remove ->make_immutable from the PerRequestSchema trait

0.57  2011-10-22 16:01:45
        - add POD for PerRequestSchema trait

0.56  2011-10-22 15:34:59
        - add PerRequestSchema trait (t0m)

0.55  Fri Sep 16 08:55:53 UTC 2011
        - add DBD::SQLite to test_requires (RT#70357)

0.54  Fri Aug  5 11:29:00 EDT 2011
        - Changed t/08helper.t to skip if required features are not installed.
        - tweaked the Makefile.PL to support these changes

0.53  Wed Aug  3 03:45:07 UTC 2011
        - check loader args after connect_info against loader methods and remove
          them from connect_info

0.52  Thu Jul 28 22:07:38 UTC 2011
        - fix a bug in loader args reading after connect_info (skip structs)

0.51  Wed Jul 27 20:57:47 UTC 2011
        - warn when helper finds no tables
        - accept loader args after connect_info

0.50  Fri May 20 22:45:07 UTC 2011
        - change repository link to the new git repo
        - get t/05testapp.t to run on Win32

0.49  Wed May 11 06:03:50 UTC 2011
        - make sure storage_type class is loaded before ->isa check in
          Replicated trait (RT#65791)
        - fix regex stringification test for perl 5.14 (RT#68098)
        - update connect_info POD (RT#66010)

0.48  Thu Dec  9 21:08:33 UTC 2010